# Game_rubik

./: .gitignore  Cargo.toml  README.md  architecture.md  setup.sh
rubik_solver/: Cargo.toml  architecture.md
rubik_solver/examples/: center_solver.rs  edges_solver.rs  full_solver.rs  macro_solver_nxn.rs  parity_solver.rs  solve_2_swap.rs  solve_verification.rs
rubik_solver/hand_tracker/: hand_tracker.py
rubik_solver/rubik_solver/: Cargo.toml
rubik_solver/rubik_solver/src/: core.rs  plugin.rs
rubik_solver/scratch/: test_parity.rs
rubik_solver/src/: commutator_solver.rs  core.rs  events.rs  helpers.rs  lbl_3x3.rs  lib.rs  macro_solver.rs  main.rs  moves.rs  nxn_daemon.py  plugin.rs  resources.rs  solver.rs  state.rs
rubik_solver/src/camera/: components.rs  mod.rs  systems.rs
rubik_solver/src/center_solver/: center.rs  commutator.rs  orbit.rs
rubik_solver/src/cube/: mod.rs  moves.rs
rubik_solver/src/environment/: mod.rs  systems.rs
rubik_solver/src/input/: hand_tracking.rs  mod.rs  resources.rs  systems.rs
rubik_solver/src/nxn/: centers.rs  edges.rs  formulas.rs  mod.rs  orbit.rs  parity.rs  solver.rs  state.rs
rubik_solver/src/reduction/: centers.rs  edges.rs  mod.rs  parity.rs
rubik_solver/src/rubik/: mod.rs  systems.rs
rubik_solver/src/rubik/systems/: interaction.rs  label.rs
rubik_solver/src/solver/: center.rs  commutator.rs  mod.rs
rubik_solver/src/tests/: macro_tests.rs
rubik_solver/src/ui/: components.rs  layout.rs  mod.rs
rubik_solver/src/ui/interactions/: mod.rs  (+2 more)
rubik_solver/tests/: center_tests.rs  commutator_tests.rs
(+57 files in other folders)
