[package]
name = "rubik_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18" }
kewb = "0.4.3"
rand = { version = "0.10.1", features = ["thread_rng"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Custom overrides
too_many_arguments = "allow"
type_complexity = "warn"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
collapsible_if = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
